/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Enum.java to edit this template
 */
package Ejercicio32_Hoteles.Enumeraciones;

/**
 *
 * @author altoc
 */
public enum NombreActividad {
    CLASE_YOGA,
    EXCURSION_GUIADA,
    CATA_VINOS,
    TALLER_COCINA,
    ANIMACION_INFANTIL,
    FIESTA_TEMATICA,
    PASEO_BICI,
    SPA_TERAPIA,
    ENTRENAMIENTO_FUNCIONAL
}
